[project]
name = "zy-code"
version = "0.1.0"
description = "Multi-agent log analysis tools for Galaxy, MiroFlow, and Shiyu pipelines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.59.0",
  "pydantic>=2.10.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
]

[tool.uv]
package = false

